Check Boxes and Alignment Issues

--- a/src/App.css
+++ b/src/App.css
@@ -52,10 +52,10 @@ input {
 }
 
 .letter-head {
-  /* background: url('./letter-head.jpg'); */
+  background: url('./letter-head.jpg');
   width: 210mm;
   height: 297mm;
-  /* background-size: 100%; */
+  background-size: 100%;
   margin: 0px auto;
 }
 
@@ -161,13 +161,26 @@ input {
   height: 50px;
   margin-left: 16px !important;
 }
+
 .investigations {
   margin-top: 20px !important;
   margin-left: -30px !important;
   height: 290px;
 }
+
 .review {
   margin-top: 20px !important;
   margin-left: -30px !important;
   height: 90px;
+}
+
+.checkbox-area {
+  left: 154px;
+  position: relative;
+  top: 45px;
+}
+
+.date {
+  margin-left: 140px;
+  margin-top: 8px;
 }
